[gd_scene load_steps=2 format=3 uid="uid://bkcg0otewfvx"]

[ext_resource type="Script" path="res://board.gd" id="1_6cxt8"]

[node name="board" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6cxt8")

[node name="panel_container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="aspect_ratio_container" type="AspectRatioContainer" parent="panel_container"]
layout_mode = 2

[node name="grid_container" type="GridContainer" parent="panel_container/aspect_ratio_container"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8
